@@ -12,11 +12,12 @@ Pivot.call = p => {
         dataType: p.dataType || 'json',
         statusCode: {
             401: function () {
-                if (('Cam' === app.authenticationMode || 'SSOPool' === app.authenticationMode || 'SSOBasicPool' === app.authenticationMode) && app.handled401 === false) {
+                if ('Cam' === app.authenticationMode && app.handled401 === false) {
                     app.handled401 = true;
                     $.cookie("authenticated", 0);
                     window.location.href = app.url.authenticationBridge;
                 }
+                Extensions.forEach(ext => ext.handle401());
             }
         }
     }).always(() => {
